--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,8 +18,8 @@
           </a>
           <div class="dropdown-menu">
             <a [routerLink]="['/myRoutine']" class="dropdown-item">Mis Rutinas</a>
-            <a [routerLink]="['/routine']" class="dropdown-item">Rutinas</a>
-            <a [routerLink]="['/routineGenerated']" class="dropdown-item">Generar mi Rutina</a>
+            <a [routerLink]="['/routine']" class="dropdown-item">Generar rutina segun tu nivel</a>
+            <a [routerLink]="['/routineGenerated']" class="dropdown-item">Generar rutina personalizada</a>
             <a [routerLink]="['/user-profile']" class="dropdown-item">Perfil</a>
             <a [routerLink]="['/calendar']" class="dropdown-item">Calendario</a>
           </div>
