--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 text-center">
               <img src="./assets/img/brand/calisapp2.png" style="width: 300px;" class="img-fluid">
-              <p class="lead text-white">Guía completa de calistenia, para organizar y planificar tus entrenamientos.</p>
+              <p class="lead text-white">Guía de calistenia, para organizar y planificar tus entrenamientos.</p>
               <div class="mt-5">
                 <small class="text-white font-weight-bold mb-0 mr-2">*proudly coded by</small>
                 <img src="./assets/img/brand/calisapp2.png" style="height: 28px;">
