--- a/src/app/my-routine/my-routine.component.css
+++ b/src/app/my-routine/my-routine.component.css
@@ -9,6 +9,6 @@
 
 .content-transparent{
     background:transparent;
-    border:1px solid rgb(214, 214, 214) !important;
+    background-color: rgba(255,255,255,0.2);
     font-weight: bolder;
 }
