--- a/src/app/routine-generated/routine-generated.component.html
+++ b/src/app/routine-generated/routine-generated.component.html
@@ -3,101 +3,100 @@
     <!-- shape Hero -->
     <section class="section section-lg section-shaped pb-250">
       <div class="shape shape-style-1 shape-primary">
-      </div>
-      <div class="col-sm-9"><br>
-        <h2 class="display-3 mb-0" style="color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
-          Selecciona ejercicios y crea tu rutina personalizada:
-        </h2>
-      </div><br>
-      <!-- SVG separator -->
-      <div class="separator separator-bottom separator-skew">
-        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-          <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-        </svg>
-      </div>
-      <div style="text-transform:uppercase; height:5rem; text-align: center; color:rgb(255, 255, 255);">
-        <label for="name">Nombre de su nueva rutina: </label> <br>
-        <input type="text" placeholder="Ingrese un nombre" [(ngModel)]="nameNewRoutine" name="nameNewRoutine" required size="60">
-      </div>
-      <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="isVisible()">
-        <a href="javascript:void(0)" (click)="createRoutine(classic3)" class="btn btn-warning mt-4">
-          Iniciar Rutina
-        </a>
-      </div>
-      <div style="color:rgb(255, 255, 255); text-transform:uppercase; height:5rem; text-align: center;" *ngIf="!isVisible()">
-        Debe ingresar el nombre de la rutina y seleccionar al menos un ejercicio.
-      </div>
-      <ng-template #classic3 let-c="close" let-d="dismiss">
-        <div class="modal-content bg-gradient-danger">
-          <div class="modal-header">
-            <h6 class="modal-title" id="modal-title-notification"></h6>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="d('Cross click')">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="py-3 text-center">
-              <i class="ni ni-like-2 ni-3x"></i>
-              <h4 class="heading mt-4">Su rutina es genero correctamente!</h4>
-              <p>Usted a iniciado la rutina: {{nameNewRoutine}}, puede acceder a ella desde Ver mis rutinas.</p>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-white" href="javascript:void(0)" (click)="c('Close click'); navigateMyRoutine()">Ver mis rutinas</button>
-            <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal" (click)="c('Close click')">Cerrar</button>
-          </div>
+      </div>      
+      <div style="position: relative">
+        <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
+            <p style="font-size: 20px; color: white">Loading...</p>
+        </ngx-spinner>
+        <div class="col-sm-9"><br>
+          <h2 class="display-3 mb-0" style="color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
+            Selecciona ejercicios y crea tu rutina personalizada:
+          </h2>
+        </div><br>
+        <div style="text-transform:uppercase; height:5rem; text-align: center; color:rgb(255, 255, 255);">
+          <label for="name">Nombre de su nueva rutina: </label> <br>
+          <input type="text" placeholder="Ingrese un nombre" [(ngModel)]="nameNewRoutine" name="nameNewRoutine" required size="60">
         </div>
-      </ng-template>
-      <div class="row row-grid justify-content-center">
-        <ul class="code-editor-options-menu" *ngFor="let dat of allExercise">
-          <div class="card border-light mb-10" [ngClass]="exerciseIsSelected(dat)">
-            <div class="card-header bg-transparent justify-content-center border-0" 
-                  style="text-transform:uppercase; height:3.5rem; text-align: center; color:rgb(255, 255, 255);font-weight: bolder; font-size:17px;">
-              {{dat.processExercise.nameExercise}}
+        <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="isVisible()">
+          <a href="javascript:void(0)" (click)="createRoutine(classic3)" class="btn btn-success mt-0">
+            Iniciar Rutina
+          </a>
+        </div>
+        <div style="color:rgb(255, 255, 255); text-transform:uppercase; height:5rem; text-align: center;" *ngIf="!isVisible()">
+          Debe ingresar el nombre de la rutina y seleccionar al menos un ejercicio.
+        </div>
+        <ng-template #classic3 let-c="close" let-d="dismiss">
+          <div class="modal-content bg-gradient-danger">
+            <div class="modal-header">
+              <h6 class="modal-title" id="modal-title-notification"></h6>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="d('Cross click')">
+                <span aria-hidden="true">×</span>
+              </button>
             </div>
-            <div class="card-body text-white">
-              <p class="card-text" style="font-weight:bolder; font-size:15px; text-shadow: 2px 2px 5px rgb(110, 109, 109); height:6rem;">
-                <i class="ni ni-user-run"></i> <i> 
-                  {{dat.repetitions}} repeticiones 
-                </i> <br>
-                <i class="bi bi-arrow-clockwise"> 
-                  {{dat.series}} series 
-                </i> <br>
-                <i class="bi bi-trophy"> 
-                {{dat.processExercise.mainMuscle}}
-                </i> <br>
-                <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" style="color:rgb(0, 30, 128)"> 
-                  <i class="bi bi-youtube"> 
-                    Video explicativo
-                  </i>
-                </a><br>
-                <i class="bi bi-info-circle"> 
-                  {{dat.processExercise.description}}
-                </i> 
-              </p>
+            <div class="modal-body">
+              <div class="py-3 text-center">
+                <i class="ni ni-like-2 ni-3x"></i>
+                <h4 class="heading mt-4">Su rutina es genero correctamente!</h4>
+                <p>Usted a iniciado la rutina: {{nameNewRoutine}}, puede acceder a ella desde Ver mis rutinas.</p>
+              </div>
             </div>
-            <div class="card-footer bg-transparent border-0">
-              <div *ngIf="isSelected(dat)" >
-                <a href="javascript:void(0)" (click)="addExerciseToRoutine(dat)"  class="btn btn-link btn-block">
-                  <div style="text-align: center; color:rgb(2, 0, 134);font-weight: bolder; font-size:18px;">
-                    <i class="bi bi-folder-plus">
-                      Agregar
-                    </i>
-                  </div>
-                </a>
-              </div>
-              <div *ngIf="!isSelected(dat)">
-                <a href="javascript:void(0)" (click)="removeExerciseToRoutine(dat)" class="btn btn-link btn-block">
-                  <div style="text-align: center; color:rgb(53, 18, 18);font-weight: bolder; font-size:18px;">
-                    <i class="bi bi-folder-minus">
-                      Quitar
-                    </i>
-                  </div>
-                </a>
-              </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-white" href="javascript:void(0)" (click)="c('Close click'); navigateMyRoutine()">Ver mis rutinas</button>
+              <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal" (click)="c('Close click')">Cerrar</button>
             </div>
           </div>
-        </ul>
+        </ng-template>
+        <div class="row row-grid justify-content-center">
+          <ul class="code-editor-options-menu" *ngFor="let dat of allExercise">
+            <div class="card border-light mb-10" [ngClass]="exerciseIsSelected(dat)">
+              <div class="card-header bg-transparent justify-content-center border-0" 
+                    style="text-transform:uppercase; height:3.5rem; text-align: center; color:rgb(255, 255, 255);font-weight: bolder; font-size:17px;">
+                {{dat.processExercise.nameExercise}}
+              </div>
+              <div class="card-body text-white">
+                <p class="card-text" style="font-weight:bolder; font-size:15px; text-shadow: 2px 2px 5px rgb(110, 109, 109); height:6rem;">
+                  <i class="ni ni-user-run"></i> <i> 
+                    {{dat.repetitions}} repeticiones 
+                  </i> <br>
+                  <i class="bi bi-arrow-clockwise"> 
+                    {{dat.series}} series 
+                  </i> <br>
+                  <i class="bi bi-trophy"> 
+                  {{dat.processExercise.mainMuscle}}
+                  </i> <br>
+                  <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" target="_blank" style="color:rgb(0, 30, 128)"> 
+                    <i class="bi bi-youtube"> 
+                      Video explicativo
+                    </i>
+                  </a><br>
+                  <i class="bi bi-info-circle"> 
+                    {{dat.processExercise.description}}
+                  </i> 
+                </p>
+              </div>
+              <div class="card-footer bg-transparent border-0">
+                <div *ngIf="isSelected(dat)" >
+                  <a href="javascript:void(0)" (click)="addExerciseToRoutine(dat)"  class="btn btn-link btn-block">
+                    <div style="text-align: center; color:rgb(2, 0, 134);font-weight: bolder; font-size:18px;">
+                      <i >
+                        + Agregar
+                      </i>
+                    </div>
+                  </a>
+                </div>
+                <div *ngIf="!isSelected(dat)">
+                  <a href="javascript:void(0)" (click)="removeExerciseToRoutine(dat)" class="btn btn-link btn-block">
+                    <div style="text-align: center; color:rgb(53, 18, 18);font-weight: bolder; font-size:18px;">
+                      <i>
+                        - Quitar
+                      </i>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </ul>
+        </div>
       </div>
     </section>
   </div>
