Se arreglaron errores ortograficos

--- a/src/app/routine/routine.component.html
+++ b/src/app/routine/routine.component.html
@@ -66,7 +66,7 @@
                   </div>
                   <h6 class="text-warning">Nivel Avanzado</h6>
                   <p class="description mt-3">Rutinas con ejercicios complejos, donde potenciaras tus grupos musculares. Para personas con gran experiencia en calistenia, fuerza y control corporal.</p>
-                  <a href="javascript:void(0)" (click)="getRoutinesWithLevel('3', 'Rutinas de Nivel Intermedio:')" class="btn btn-warning mt-4">Ver Rutinas</a>
+                  <a href="javascript:void(0)" (click)="getRoutinesWithLevel('3', 'Rutinas de Nivel Avanzado:')" class="btn btn-warning mt-4">Ver Rutinas</a>
                 </div>
               </div>
             </div>
@@ -132,7 +132,7 @@
                 <div class="modal-body">
                   <div class="py-3 text-center">
                     <i class="ni ni-like-2 ni-3x"></i>
-                    <h4 class="heading mt-4">Su rutina es genero correctamente!</h4>
+                    <h4 class="heading mt-4">Su rutina se genero correctamente!</h4>
                     <p>Usted a iniciado la rutina: {{rou.nameRoutine}}, puede acceder a ella desde Ver mis rutinas.</p>
                   </div>
                 </div>
