--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,14 @@
     <div class="container pt-lg-md">
       <div class="row justify-content-center">
         <div class="col-lg-5">
+          <ngb-alert class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
+            <span class="alert-inner--text"><strong>{{ errorMessage }}</strong></span>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
+              <!-- <span aria-hidden="true">&times;</span> -->
+            </button>
+          </ngb-alert>
           <div class="card bg-secondary shadow border-0">
+            <!--  
             <div class="card-header bg-white pb-5">
               <div class="text-muted text-center mb-3">
                 <small>Sign up with</small>
@@ -33,56 +40,59 @@
                 </a>
               </div>
             </div>
+          -->
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
-                <small>Or sign up with credentials</small>
+                <h1 class="h3 mb-3 font-weight-normal">Registrarse</h1>
               </div>
-              <form role="form">
-                <div class="form-group" [ngClass]="{'focused':focus===true}">
-                  <div class="input-group input-group-alternative mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Name" type="text" (focus)="focus=true" (blur)="focus=false">
-                  </div>
-                </div>
-                <div class="form-group" [ngClass]="{'focused':focus1===true}">
-                  <div class="input-group input-group-alternative mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Email" type="email" (focus)="focus1=true" (blur)="focus1=false">
-                  </div>
-                </div>
-                <div class="form-group" [ngClass]="{'focused':focus2===true}">
-                  <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Password" type="password" (focus)="focus2=true" (blur)="focus2=false">
-                  </div>
-                </div>
-                <div class="text-muted font-italic">
-                  <small>password strength:
-                    <span class="text-success font-weight-700">strong</span>
-                  </small>
-                </div>
+              <hr>
+              <form [formGroup]="loginForm.baseForm" class="form">
+                <mat-form-field class="full-width-input">
+                  <input class="form-control" text="text" formControlName="mail" matInput placeholder="Email"
+                    required />
+                  <mat-error *ngIf="checkField('mail')">
+                    {{ loginForm.errorMessage }}
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field class="full-width-input">
+                  <input class="form-control" text="text" formControlName="name" matInput placeholder="Nombre"
+                    required />
+                  <mat-error *ngIf="checkField('name')">
+                    {{ loginForm.errorMessage }}
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field class="full-width-input">
+                  <input class="form-control" [type]="hide ? 'password' : 'text'" formControlName="password" matInput
+                    placeholder="Password" required />
+                  <button mat-icon-button matSuffix (click)="hide = !hide">
+                    <mat-icon>
+                      {{ hide ? "visibility_off" : "visibility" }}
+                    </mat-icon>
+                  </button>
+                  <mat-error *ngIf="checkField('password')">
+                    {{ loginForm.errorMessage }}
+                  </mat-error>
+                </mat-form-field>
                 <div class="row my-4">
                   <div class="col-12">
                     <div class="custom-control custom-control-alternative custom-checkbox">
                       <input class="custom-control-input" id="customCheckRegister" type="checkbox">
                       <label class="custom-control-label" for="customCheckRegister">
-                        <span>I agree with the
-                          <a href="javascript:void(0)">Privacy Policy</a>
+                        <span>Estoy de acuerdo con las
+                          <a href="javascript:void(0)">Políticas de privacidad</a>
                         </span>
                       </label>
                     </div>
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="button" class="btn btn-primary mt-4">Create account</button>
+                  <button [disabled]="loginForm.baseForm.invalid" type="button"
+                    class="btn btn-primary my-4 form-control" (click)="register()">Registrarse</button>
                 </div>
               </form>
+              <div class="form-group mb-3 text-center">
+                <a routerLink="/login">¿Ya tienes una cuenta? Inicia sesión</a>
+              </div>
             </div>
           </div>
         </div>
